--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wedding Planner - [Ton Nom]</title>
+  <title>Wedding Planner - Neema Events</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -126,7 +126,7 @@
   </section>
 
   <footer>
-    &copy; 2025 [Neema Events] - Wedding Planner | Site réalisé avec 💕
+    &copy; 2025 Neema Events - Wedding Planner | Site réalisé avec 💕
   </footer>
 
 </body>
