--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background-image: url('https://source.unsplash.com/1600x900/?wedding');
+      background-image: IMG_1603.jpeg;
       background-size: cover;
       background-position: center;
       color: white;
