--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background-image: IMG_1603.jpeg;
+      background-image: url(https://github.com/cornelnt/neema-events/blob/main/IMG_1603.jpeg?raw=true);
       background-size: cover;
       background-position: center;
       color: white;
