--- a/index.html
+++ b/index.html
@@ -75,14 +75,19 @@
 
   <header>
     <h1>Neema Events</h1>
-    <p>Créatrice d’instants magiques, planificatrice de bonheur.</p>
+    <p>Créez le mariage de vos rêves avec Neema Events, votre société de wedding planner.</p>
     <a href="#contact" class="btn">Réserver un appel gratuit</a>
   </header>
 
   <section id="about">
     <h2>À propos</h2>
-    <p>Moi, c’est Cornélia 🌿<br>
-    Passionnée par l’amour, l’organisation et les petits détails qui font la différence, j’aide les futurs mariés à vivre leur jour J sereinement.<br>
+    <p>Moi, c’est Cornélia, L’univers de l’événementiel a toujours été une évidence pour moi. 🌿<br>
+    En 2015, j’ai commencé à travailler dans ce milieu en développant une activité spécialisée dans la mise à disposition d’hôtes et d’hôtesses pour divers événements. <br>
+    Cette expérience m’a permis de gérer des équipes, de coordonner des prestations et de comprendre les exigences du terrain.<br> 
+    Très vite, j’ai appris à m’adapter aux imprévus, à trouver des solutions rapidement et à assurer le bon déroulement des événements, quelles que soient les circonstances.<br>
+    Mais c’est en 2022 que mon parcours a pris un véritable tournant. J’ai eu l’opportunité d’organiser le mariage d’un couple d’amis, une expérience qui s’est révélée être une véritable révélation.<br>
+    Voir leur bonheur, gérer chaque détail pour faire de leur jour J un moment inoubliable, m’a donné envie d’aller plus loin. C’est ainsi que j’ai décidé de me consacrer pleinement à l’organisation d’événements, et plus particulièrement aux mariages.<br>
+    Aujourd’hui à travers MayDAY Events, mon entreprise de wedding planner, mon objectif est d’apporter aux futurs mariés une expérience unique, en combinant créativité, innovation et une approche personnalisée pour faire de leur mariage un moment qui leur ressemble,  en toute sérénité, même face aux imprévus.<br>
     Je crée avec vous un mariage à votre image : romantique, fun, atypique… mais surtout inoubliable.</p>
   </section>
 
@@ -92,8 +97,7 @@
       <li>✨ Organisation complète : de l’idée au jour J</li>
       <li>✨ Organisation partielle : une partie seulement à gérer</li>
       <li>✨ Coordination du jour J : vous profitez, je gère</li>
-      <li>✨ Escape game de mariage : pour une animation originale !</li>
-      <li>✨ Espace enfants & baby-sitter : pour des parents détendus</li>
+      <li>✨ Wedscape : Escape game de mariage - pour une animation originale !</li>
     </ul>
     <a href="#contact" class="btn">Demander un devis</a>
   </section>
